base/hubble/ui/deployment.k8s.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hubble-ui
spec:
  template:
    spec:
      securityContext:
        runAsUser: 1001
      serviceAccount: hubble-ui
      serviceAccountName: hubble-ui
      containers:
        - name: frontend
          image: "quay.io/cilium/hubble-ui:v0.7.3"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
        - name: backend
          image: "quay.io/cilium/hubble-ui-backend:v0.7.3"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8090
              name: grpc
        - name: proxy
          image: "docker.io/envoyproxy/envoy:v1.14.5"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              name: http
          command: ["envoy"]
          args: ["-c", "/etc/envoy.yaml", "-l", "info"]
          volumeMounts:
            - name: hubble-ui-envoy-yaml
              mountPath: /etc/envoy.yaml
              subPath: envoy.yaml
      volumes:
        - name: hubble-ui-envoy-yaml
          configMap:
            name: hubble-ui-envoy
