base/hubble/ui/service.k8s.yaml
kind: Service
apiVersion: v1
metadata:
  name: hubble-ui
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8081
